@@ -1,76 +1,0 @@
-.ui-tabs-nav {
-	border-bottom: 1px solid #ccc;
-	height: 27px;
-	margin: 20px 0;
-	padding: 0;
-}
-
-.ui-tabs-nav li {
-	display: block;
-	float: left;
-	margin: 0;
-}
-
-.ui-tabs-nav li a {
-	padding: 4px 20px 6px;
-	font-weight: bold;
-}
-
-.ui-tabs-nav li a {
-	border-style: solid;
-	border-color: #CCC #CCC #F9F9F9;
-	border-width: 1px 1px 0;
-	color: #C1C1C1;
-	text-shadow: rgba(255, 255, 255, 1) 0 1px 0;
-	display: inline-block;
-	padding: 4px 14px 6px;
-	text-decoration: none;
-	margin: 0 6px -1px 0;
-	-moz-border-radius: 5px 5px 0 0;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-top-right-radius: 5px;
-	-khtml-border-top-left-radius: 5px;
-	-khtml-border-top-right-radius: 5px;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-}
-
-.ui-tabs-nav li.ui-tabs-selected a,
-.ui-tabs-nav li.ui-state-active a {
-	border-width: 1px;
-	color: #464646;
-}
-
-.ui-tabs-panel {
-	clear: both;
-}
-
-.ui-tabs-panel h3 {
-	font: italic normal normal 24px/29px Georgia,"Times New Roman","Bitstream Charter",Times,serif;
-	margin: 0;
-	padding: 0 0 5px;
-	line-height: 35px;
-	text-shadow: 0 1px 0 #fff;
-}
-
-.ui-tabs-panel h4 {
-	font-size: 15px;
-	font-weight: bold;
-	margin: 1em 0;
-}
-
-.wrap h3, .wrap table {
-	display: none;
-}
-div.ready {
-	font-weight: bold;
-	clear: both;
-	padding-top: 1em;
-}
-p.submit {
-	padding-bottom: 2em;
-}
-div.copyright {
-	clear: both;
-	padding-top: 1em;
-}
